--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ecommerce
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=***
+spring.datasource.username=****
 spring.datasource.password=****
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql =true
